crates/dsrs-macros/tests/ui/render_on_output.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct RenderOnOutput {
    #[input]
    question: String,

    #[output]
    #[render(jinja = "{{ this }}")]
    answer: String,
}

fn main() {}
